fix(slider): minor fixes animation and jump js slider

--- a/src/docs/assets/styles/theme.css
+++ b/src/docs/assets/styles/theme.css
@@ -6166,8 +6166,11 @@ html.xt-focus:not(.xt-focus--disable) input[type="radio"]:focus ~ .form-label:be
   outline-width: 5px;
 }
 .slides {
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
   transition-property: height;
-  transition-duration: 1000ms;
+  transition-duration: 500ms;
   transition-timing-function: cubic-bezier(.68,.13,.25,1);
 }
 .slides_inner {
@@ -6178,8 +6181,8 @@ html.xt-focus:not(.xt-focus--disable) input[type="radio"]:focus ~ .form-label:be
   flex-wrap: nowrap;
   align-items: flex-start;
   transition-property: transform;
-  transition-duration: 1000ms;
-  transition-timing-function: cubic-bezier(.36,0,0,1);
+  transition-duration: 500ms;
+  transition-timing-function: cubic-bezier(.68,.13,.25,1);
 }
 .slides_inner > * {
   padding: 1rem 1rem;
